--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
         <!-- Page 1 -->
         <div class="page">
-            <p class="opening-line">A fost odată ca niciodată, într-un tărâm îndepărtat, peste 9 mări și peste 9 țări, un tărâm minunat unde era un regat... numit Regat.</p>
+            <p class="opening-line">A fost odată ca niciodată, peste 9 mări și peste 9 țări, un tărâm minunat unde era un regat... numit Regat.</p>
             <div class="illustration forest-scene">
                 <div class="image-placeholder">
                     📌 ADAUGĂ IMAGINE AICI
