--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <p><em>"Mă duc să înving trollul cel rău care distruge satul,"</em> îi spune el plin de încredere și îi arată sabia strălucitoare pe care o avea la brâu.</p>
                 <p>Atunci Mamaie zice: <em>"Aaa trollul cel rău, da"</em> și se mângâie pe bărbie gânditoare. <em>"Ia, uite aici ceva să te ajute băiete."</em> Și îi dădu o piatră gri, colțuroasă din aia pe care o găsești pe marginea drumurilor.</p>
                 <p>Voinicel luă piatra și o întorse pe toate părțile... <em>"Ce să fac cu ea Mamaie?"</em> zise el.</p>
-                <p><em>"Apai ca să te ajute să învingi trollul"</em> zise Mamaie. <em>"Când ajungi acolo să te uiți la troll cu piatra..."</em> și puf! Mamaie dispăru.</p>
+                <p><em>"Apăi ca să te ajute să învingi trollul"</em> zise Mamaie. <em>"Când ajungi acolo să te uiți la troll cu piatra..."</em> și puf! Mamaie dispăru.</p>
                 <p>Voinicel a rămas cu gura căscată. Mamaie era fix acolo, în fața lui și... acum unde e? Oaaa, i s-o fi părut? O fi adormit?</p>
-                <p><em>"Călule... oare am avut vedenii?"</em> Și calul zice: <em>"Nu, era Mamaie dar știi cum e ea, vine pleacă, uite așa..."</em></p>
+                <p><em>"Calule... oare am avut vedenii?"</em> Și calul zice: <em>"Nu, era Mamaie dar știi cum e ea, vine pleacă, uite așa..."</em></p>
                 <p>Apoi Voinicel își întoarse privirea către piatră... <em>"Să mă uit la troll cu piatra?"</em> își zise Voinicel. <em>"Cum adică?"</em></p>
                 <p>Și-a pus piatra la ochi, a zgâlțâit-o în mână, a... lins-o, bleah, nu părea decât o piatră normală...</p>
                 <p><em>"Mamaie iar umblă cu trucuri de astea..."</em> își zise Voinicel. <em>"Bine, oi vedea eu ce să fac cu ea"</em> și o băgă în buzunar.</p>
