--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 </div>
             </div>
             <div class="story-text">
-                <p>Când a ajuns în satul atacat de troll, văzu case distruse și oamenii stătea ascunși care pe unde nimerise. Fix în fața lui era trollul care răgea și se învârtea distrugând totul în cale.</p>
+                <p>Când a ajuns în satul atacat de troll, văzu case distruse și oamenii stăteau ascunși care pe unde nimerise. Fix în fața lui era trollul care răgea și se învârtea distrugând totul în cale.</p>
                 <p>Văzându-l, Voinicel își trase sabia din teacă și se aruncă direct spre troll.</p>
-                <p><em>"OOO trollule! Striga Voinicel, o să te înving!"</em></p>
-                <p>Și când a ajuns aproape cât să poată să îl taie cu sabia, calul se împiedică și Voinicel zură prin aer și aterizează direct în vârful unui tufiș. Plin de frunze și crengi în păr se dă jos din tufiș și se repezi din nou spre troll, numa' că o frunză pe care o scuturase Voinicel de pe el a aterizat direct la nasul trollului ceea ce l-a făcut să strănute... fix în fața lui Voinicel și l-a umplut de... muci...</p>
+                <p><em>"Oooo trollule! Striga Voinicel, o să te înving!"</em></p>
+                <p>Și când a ajuns aproape cât să poată să îl taie cu sabia, calul se împiedică și Voinicel zbură prin aer și aterizează direct în vârful unui tufiș. Plin de frunze și crengi în păr, se dă jos din tufiș și se repezi din nou spre troll, numa' că o frunză pe care o scuturase Voinicel de pe el a aterizat direct la nasul trollului ceea ce l-a făcut să strănute... fix în fața lui Voinicel și l-a umplut de... muci...</p>
                 <p>Voinicel s-a îngrețoșat și s-a aruncat direct în pârâul din apropiere să se spele.</p>
             </div>
             <div class="page-number">4</div>
@@ -128,8 +128,7 @@
             </div>
             <div class="story-text">
                 <p><em>"Mulțumesc!"</em> a zis trollul, cu ochii plini de lacrimi de bucurie. <em>"Îmi pare rău că am distrus casele voastre. Eram doar supărat și mă durea piciorul și nu mi-am dat seama că stric."</em></p>
-                <p>Oamenii din sat au ieșit din ascunzișuri și au văzut că trollul era de fapt bun și nu s-au mai speriat de el.</p>
-                <p>De atunci, trollul a devenit prietenul satului și îi ajuta pe oameni să construiască case noi, mai frumoase decât cele dinainte.</p>
+                <p>Oamenii din sat au ieșit din ascunzișuri și au văzut că trollul era de fapt bun și nu s-au mai speriat de el.</p>               
                 <p>Atunci Voinicel văzând stricăciunile din jur și supărarea sătenilor că nu mai au locuințe i-a zis trollului: <em>"Ce ai spune să îi ajuți pe oamenii ăștia să își repare casele?"</em></p>
                 <p><em>"Apăi eu le-am stricat casele... îmi pare tare rău,"</em> zise trollul plecând ochii în jos de rușine. <em>"Așa că eu o să le refac!"</em></p>
                 <p>După asta trollul mare și puternic a început să care lemne și bolovani pe care apoi le folosea pentru casele sătenilor. În curând satul nu numai că a fost reconstruit, dar arăta mult mai frumos ca înainte.</p>
