--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="story-text">
-                <p>Când a ajuns în satul atacat de Trol, văzu case distruse și oamenii stătea ascunși care pe unde nimerise. Fix în fața lui era Trolul care răgea și se învârtea distrugând totul în cale.</p>
+                <p>Când a ajuns în satul atacat de Trol, văzu case distruse și oamenii stăteau ascunși, care pe unde nimerise. Fix în fața lui era Trolul care răgea și se învârtea distrugând totul în cale.</p>
                 <p>Văzându-l, Voinicel își trase sabia din teacă și se aruncă direct spre Trol.</p>
                 <p><em>"OOO Trolule! Striga Voinicel, o să te înving!"</em></p>
                 <p>Și când a ajuns aproape cât să poată să îl taie cu sabia, calul se împiedică și Voinicel zură prin aer și aterizează direct în vârful unui tufiș. Plin de frunze și crengi în păr se dă jos din tufiș și se repezi din nou spre Trol, numa' că o frunză pe care o scuturase Voinicel de pe el a aterizat direct la nasul Trolului ceea ce l-a făcut să strănute... fix în fața lui Voinicel și l-a umplut de... muci...</p>
