--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 class="subtitle">și Trolul</h2>
             <div class="illustration village-scene">
                 <div class="image-placeholder">
-                    📌 ADAUGĂ IMAGINE AICI
+                    📌 ADAUGĂ DESENUL TAU AICI
                     <div class="image-description">Regatul minunat cu castelul</div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
             <p class="opening-line">A fost odată ca niciodată, peste 9 mări și peste 9 țări, un tărâm minunat unde era un regat... numit Regat.</p>
             <div class="illustration forest-scene">
                 <div class="image-placeholder">
-                    📌 ADAUGĂ IMAGINE AICI
+                    📌 ADAUGĂ DESENUL TAU AICI
                     <div class="image-description">Voinicel cu calul său alb cu aripi, Năzdrăvan</div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
         <div class="page">
             <div class="illustration village-scene">
                 <div class="image-placeholder">
-                    📌 ADAUGĂ IMAGINE AICI
+                    📌 ADAUGĂ DESENUL TAU AICI
                     <div class="image-description">Satul în primejdie, oamenii fugind</div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
         <div class="page">
             <div class="illustration mamaie-scene">
                 <div class="image-placeholder">
-                    📌 ADAUGĂ IMAGINE AICI
+                    📌 ADAUGĂ DESENUL TAU AICI
                     <div class="image-description">Mamaie râzând și dându-i lui Voinicel piatra magică</div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
         <div class="page">
             <div class="illustration Trol-scene">
                 <div class="image-placeholder">
-                    📌 ADAUGĂ IMAGINE AICI
+                    📌 ADAUGĂ DESENUL TAU AICI
                     <div class="image-description">Voinicel căzând în tufiș, Trolul strănută</div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
         <div class="page">
             <div class="illustration healing-scene">
                 <div class="image-placeholder">
-                    📌 ADAUGĂ IMAGINE AICI
+                    📌 ADAUGĂ DESENUL TAU AICI
                     <div class="image-description">Voinicel privind prin piatra magică la Trolul trist</div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
         <div class="page">
             <div class="illustration friendship-scene">
                 <div class="image-placeholder">
-                    📌 ADAUGĂ IMAGINE AICI
+                    📌 ADAUGĂ DESENUL TAU AICI
                     <div class="image-description">Trolul și oamenii din sat devenind prieteni</div>
                 </div>
             </div>
@@ -141,7 +141,7 @@
         <div class="page">
             <div class="illustration forest-scene">
                 <div class="image-placeholder">
-                    📌 ADAUGĂ IMAGINE AICI
+                    📌 ADAUGĂ DESENUL TAU AICI
                     <div class="image-description">Voinicel zburând acasă pe Năzdrăvan</div>
                 </div>
             </div>
