--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="story-text">
                 <p>Voinicel era tare bucuros că până la urmă monstrul nu era rău ci doar un Trol supărat care iubea să aibă oameni în jur. Așa că a urcat călare pe calul năzdrăvan și a plecat înapoi la el acasă.</p>
                 <p>I-a servit calului o bine meritată tavă cu jar pe care calul a mâncat-o dintr-o înghițitură și Voinicel s-a dus în casă și s-a culcat, căci era tare obosit.</p>
-                <p style="text-align: center; font-style: italic; margin-top: 30px; color: #e17055; font-size: 1.1em;">Și-am încălecat pe-o șa și am spus povestea-sa și am încălecat pe-o căpșună și am spus o mare și gogonată minciună.</p>
+                <p style="text-align: center; font-style: italic; margin-top: 30px; color: #e17055; font-size: 1.1em;">Și-am încălecat pe-o șa și am spus povestea așa și am încălecat pe-o căpșună și am spus o mare și gogonată minciună.</p>
             </div>
             <div class="page-number">7</div>
         </div>
